<resources>
    <string name="app_name">HW_GB_Android</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Первый экран</string>
    <string name="second_fragment_label">Второй экран</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="input_name">Ваше имя</string>
    <string name="input_phone">Введите телефон</string>
    <string name="input_pass">Введите пароль</string>
    <string name="input_number">Введите число</string>
    <string name="input_mail">Введите email</string>
    <string name="toSecondActivity">Продолжить</string>
    <string name="hello_geekbrains">Hello, Geekbrains!</string>
    <string name="toSecond">Перейти на 2 экран</string>
    <string name="enable_any">Включить что-то</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_div">/</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="percent">%</string>
    <string name="clear">CE</string>
    <string name="equals">=</string>
    <string name="point">.</string>
    <string name="_0">0</string>
    <string name="multiply_extended">x</string>
    <string name="title_activity_settings">Настройки</string>

    <string name="reply_select_theme">Выберите тему</string>
    <string name="ID_THEME">theme_name</string>
</resources>