<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_1"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_2"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_3"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_multiply"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_4"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_5"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_6"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_minus"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_7"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_8"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_9"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_plus"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_div"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintEnd_toEndOf="@+id/button_multiply"
        app:layout_constraintStart_toStartOf="@+id/button_multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="@dimen/fontCalculatorSize"
        app:icon="@drawable/ic_multiply"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="@+id/button_minus"
        app:layout_constraintStart_toStartOf="@+id/button_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/minus"
        android:textSize="@dimen/fontCalculatorSize"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="@+id/button_plus"
        app:layout_constraintStart_toStartOf="@+id/button_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/plus"
        android:textSize="@dimen/fontCalculatorSize"
        app:layout_constraintBottom_toTopOf="@+id/button_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/percent"
        android:textSize="@dimen/fontCalculatorSize"
        app:layout_constraintBottom_toBottomOf="@+id/button_divider"
        app:layout_constraintEnd_toStartOf="@+id/button_divider"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_backspace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="@dimen/fontCalculatorSize"
        app:icon="@drawable/ic_backspace"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="@id/button_percent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/clear"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/button_backspace"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        android:text="@string/equals"
        android:textSize="@dimen/fontCalculatorSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:text="@string/point"
        android:textSize="@dimen/fontCalculatorSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_equals" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPreviewcalculation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/fonst_size_result"
            android:hint="@string/_0"
            android:layout_gravity="bottom"
            android:gravity="end|bottom"/>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/_0"
        android:textSize="@dimen/fontCalculatorSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_equals"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>